force-app/main/default/objects/Event_Field_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this field mapping is included in dynamic event payload construction. Set to false to disable a mapping without deleting it.</description>
    <inlineHelpText>Check to include this mapping in event payloads. Uncheck to disable without deleting.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>