force-app/main/default/objects/Event_Field_Mapping__mdt/fields/Is_Header_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Header_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this field is always included in the event payload regardless of whether the value changed. Used for identifier/header keys.</description>
    <inlineHelpText>Check for identifier fields (e.g. record Id) that must always appear in every payload.</inlineHelpText>
    <label>Is Header Field</label>
    <type>Checkbox</type>
</CustomField>