force-app/main/default/objects/Event_Field_Mapping__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The Salesforce object API name this mapping applies to (Account or Contact).</description>
    <inlineHelpText>Enter the SObject API name: Account or Contact.</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>